<resources>
    <string name="app_name">CardView</string>

    <string name="nm_youtube">Youtube</string>
    <string name="nm_facebook">Facebook</string>
    <string name="nm_google_plus">Google Plus</string>
    <string name="nm_linkedin">Linkedin</string>
    <string name="nm_whatsapp">WhatsApp</string>
    <string name="iv_imagem">Imagem</string>

    <string name="action_settings">Config</string>
    <string name="title_activity_second">Segunda Activity</string>
    <string name="action_second_activity">SegundaActivity</string>
</resources>
