<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CardActivity">
    <item
        android:id="@+id/action_facebook"
        android:orderInCategory="100"
        android:icon="@drawable/ic_facebook"
        android:title="@string/nm_facebook"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_youtube"
        android:orderInCategory="100"
        android:icon="@drawable/ic_youtube"
        android:title="@string/nm_youtube"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_google_plus"
        android:orderInCategory="100"
        android:icon="@drawable/ic_google_plus"
        android:title="@string/nm_google_plus"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_linkedin"
        android:orderInCategory="100"
        android:icon="@drawable/ic_linkedin"
        android:title="@string/nm_linkedin"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_whatsapp"
        android:orderInCategory="100"
        android:icon="@drawable/ic_whatsapp"
        android:title="@string/nm_whatsapp"
        app:showAsAction="always"/>

</menu>